QE-925 Fix arrow spacing in hero card slider

--- a/wp-content/themes/quarkexpeditions/src/editor/blocks/hero-card-slider/editor.scss
+++ b/wp-content/themes/quarkexpeditions/src/editor/blocks/hero-card-slider/editor.scss
@@ -9,3 +9,7 @@
 	justify-content: space-between;
 	align-items: center;
 }
+
+.hero-card-slider__arrow-button {
+	margin-top: 100px;
+}
